# abstracto-assets

./: CMakeLists.txt  README.md
apps/assets_example/: main.cpp
assets/: character_mannequin.character.json
src/: CharacterModelAsset.cpp  CharacterRecipeGenerator.cpp  GltfModelAsset.cpp
src/assets/: CharacterModelAsset.h  CharacterRecipe.h  CharacterRecipeGenerator.h  CharacterRecipeIO.h  GltfModelAsset.h  ImportedModelData.h  ImportedSkeletonData.h  ModelAsset.h  ObjModelAsset.h
